fix(build): resolve GradleWrapperMain missing error in CI
- Update .gitignore to explicitly whitelist gradle-wrapper.jar and properties
- Correct the path for gradle-wrapper.properties in .gitignore
- Ensure the Gradle wrapper binary is tracked by Git
- Fix execution permissions for gradlew script

This change fixes the "Could not find or load main class" error in GitHub Actions.

--- a/.gitignore
+++ b/.gitignore
@@ -102,16 +102,13 @@ http-client.private.env.json
 **/build/
 !**/src/**/build/
 
-# Ignore Gradle GUI config
-gradle-app.setting
+!gradle/wrapper/
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle/wrapper/gradle-wrapper.jar
 
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
+!gradle/wrapper/gradle-wrapper.properties
 
-# Cache of project
+gradle-app.setting
 .gradletasknamecache
 
 # Eclipse Gradle plugin generated files
